# ppr_monitor

./: .gitignore  ANALYSIS_REPORTE.md  PROJECT_OVERVIEW.md  PUSH_TO_REMOTE.md  README.md  ROADMAP.md  STATUS.md  alembic.ini  detalle tablas.txt  detalle_cambios.md  extract_data  init_app.bat  init_db_only.bat  monitor_ppr  ppr.txt  prompt.txt  pyproject.toml  start_app.bat  status  test.py  test_db_connection.py  test_roles.py  todo_list.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_hashed_password_length.py  002_fix_passwd_len.py  35fe86670274_add_cartera_servicios_table.py  8a5c8c2f0af7_merge_heads.py  c8d2b0e4a77a_add_anio_cartera.py
app/: main.py
app/api/v1/: api.py  asignaciones.py  auth.py  cartera.py  comparison.py  dashboard.py  dashboard.py.bak  files.py  ppr.py  programacion.py  user_management.py  users.py  users_fixed.py
app/core/: config.py  database.py  logging_config.py  rbac.py  role_converter.py  security.py
app/models/: __init__.py  asignacion.py  base.py  cartera_servicios.py  ppr.py  programacion.py  user.py
app/schemas/: __init__.py  common.py  ppr.py  user.py
app/services/: cartera_service.py  comparison_service.py  extractor_service.py  ppr_service.py  ppr_storage_service.py
app/static/: dashboard_admin.html  dashboard_mockup.html  dashboard_responsable_planificacion.html  dashboard_responsable_ppr.html  index.html  login.html  modal_update_values.html  ppr.html  ppr_detalle.html  preview.html  reports.html  transversal_data.html  users.html
app/static/css/: style.css
app/static/js/: common.js  main.js  preview.js
scripts/: check_bcrypt.bat  check_db_connection.py  check_users.py  create_db.py  download_frontend_libs.py  fix_user_roles.py  init_db.bat  init_db.py  init_db_alembic.py  init_db_bcrypt.py  init_db_complete.py  install.bat  install.sh  load_json_to_db.py  load_latest_json.py  recreate_admin_user.py  start.bat  start.sh  test_api.py  test_auth.py  test_password.py  test_password_direct.py  test_password_verification.py  update_roles_db.py
